Db bağlantısı kuruldu

--- a/Blog.Web/appsettings.json
+++ b/Blog.Web/appsettings.json
@@ -1,4 +1,9 @@
 {
+  //https://www.connectionstrings.com/sql-server/ Bu adresten bakabilirsin ezberleme :)
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.;Database=BlogDb;User Id=sa;Password=123;TrustServerCertificate=True;"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
